# profile.ivi.message-port

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  messageportd.service.in  project.config
common/: Makefile.am  dbus-error.c  dbus-error.h  log.h  org.tizen.messageport.Manager.xml  org.tizen.messageport.Server.xml  org.tizen.messageport.Service.xml
daemon/: Makefile.am  dbus-manager-doc-gen-org.tizen.messageport.Manager.xml  dbus-manager.c  dbus-manager.h  dbus-server.c  dbus-server.h  dbus-service.c  dbus-service.h  main.c  manager.c  manager.h  org.tizen.messageport.Manager.xml  org.tizen.messageport.Service.xml  org.tizen.messageport.service.in  server-socket.c  server-socket.h  service.c  service.h  utils.h
examples/: Makefile.am  test-app.c  test-app.cpp
lib/: Makefile.am  message-port.c  message-port.h  message-port.pc.in  msgport-factory.c  msgport-factory.h  msgport-manager.c  msgport-manager.h  msgport-service.c  msgport-service.h  msgport-utils.c  msgport-utils.h
packaging/: message-port.changes  message-port.spec
tests/: Makefile.am  test-app.c  test-app.cpp  test-dbus-daemon.conf.in
tests/services/: org.tizen.messageport.service.in
